Added control to avoir opening multiple chatRoom for same dest and multiple pseudoWindow