@@ -31,6 +31,14 @@ dependencies {
 
 application {
     mainClassName = 'app.insa.clav.Main'
+    applicationDefaultJvmArgs = [
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+            "--add-exports=javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
+    ]
+    applicationName = "JigglypuffMessenger"
 }
 
 run {
@@ -42,6 +50,16 @@ run {
         "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
 ]
 }
+
+
+jar {
+    manifest {
+        attributes("Implementation-Title": "Gradle",
+                "Implementation-Version": archiveVersion)
+    }
+}
+
+
 
 
 jlink {
